<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/com_facebook_button_background_color_disabled"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/register_toolbar"
        >

        <EditText
            android:id="@+id/register_edit_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/register_text_001"
            android:background="@drawable/bg_edittext_login"
            style="@style/TextDrawer.Widget.EditTextName"
            />

        <EditText
            android:id="@+id/register_edit_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="1dp"
            android:hint="@string/register_text_002"
            android:background="@drawable/bg_edittext_login"
            style="@style/TextDrawer.Widget.EditTextName"
            />

        <EditText
            android:id="@+id/register_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_edittext_login"
            style="@style/TextDrawer.Widget.EditTextEmail"
            />

        <EditText
            android:id="@+id/register_edit_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="1dp"
            android:inputType="phone"
            android:background="@drawable/bg_edittext_login"
            style="@style/TextDrawer.Widget.EditTextMobile"
            />

        <EditText
            android:id="@+id/register_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_edittext_login"
            style="@style/TextDrawer.Widget.EditTextPassword"
            />

        <TextView
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/register_text_003"
            style="@style/TextDrawer.Widget.RegisterText"
            />

        <Button
            android:padding="10dp"
            android:id="@+id/register_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_join_now"
            android:background="@color/colorPrimary"
            style="@style/TextDrawer.Widget.BtnJoinNow"
            />

        <TextView
            android:padding="10dp"
            android:id="@+id/register_text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/login_text_001"
            style="@style/TextDrawer.Widget.LoginText"
            />

        <com.facebook.login.widget.LoginButton
            android:padding="10dp"
            android:id="@+id/register_btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextDrawer.Widget.BtnJoinNow"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            >

            <TextView
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text_004"
                style="@style/TextDrawer.Widget.RegisterText"
                />

            <TextView
                android:paddingLeft="3dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/register_btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_in"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                style="@style/TextDrawer.Widget.RegisterText"
                />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/register_progress_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/register_toolbar"
        android:background="@color/black_transparent_100"
        android:visibility="gone"
        >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>