<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/home_header_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@color/colorPrimary"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/talent_logo_white"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/home_footer_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            />

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/home_tab_home"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:visibility="gone"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/home"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home_tab_001"
                    style="@style/TextDrawer.Widget.HomeBtnTab"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_tab_me"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/user"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home_tab_003"
                    style="@style/TextDrawer.Widget.HomeBtnTab"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_tab_search"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/search"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home_tab_005"
                    style="@style/TextDrawer.Widget.HomeBtnTab"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_tab_message"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/message"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home_tab_004"
                    style="@style/TextDrawer.Widget.HomeBtnTab"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_tab_jobmatch"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/match2"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home_tab_002"
                    style="@style/TextDrawer.Widget.HomeBtnTab"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <WebView
        android:id="@+id/home_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/home_footer_frame"
        android:layout_below="@id/home_header_frame"
        />

    <RelativeLayout
        android:id="@+id/home_progress_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/home_footer_frame"
        android:layout_below="@id/home_header_frame"
        android:background="@color/black_transparent_100"
        android:visibility="gone"
        >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>